# QuantVision

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: ci_pipelne.yml
data/: AAPL_2024-01-01_to_2024-01-30.csv  HIMS_2024-01-01_to_2024-01-30.csv  data.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: notebooks
src/: __init__.py  cli.py  data_collection.py  data_preprocessing.py  data_storage.py  main.py  models.py  visualisation.py
src/stock_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stock_env/: pyvenv.cfg
tests/: __init__.py  test_stock_prediction.py
