[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_prediction"
version = "0.1.0"
description = "Predict stock prices"
readme = "README.rst"
authors = [
  {name = "Isaac Lee", email = "ssisaaclee@gmail.com"}
]
maintainers = [
  {name = "Isaac Lee", email = "ssisaaclee@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/ssisaac/stock_prediction/issues"
changelog = "https://github.com/ssisaac/stock_prediction/blob/master/changelog.md"
homepage = "https://github.com/ssisaac/stock_prediction"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

